# tree-sitter-rego

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  index.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-parser.wasm  tree-sitter.json
.github/workflows/: node.js.yml
bindings/c/: tree-sitter-rego.pc.in
bindings/c/tree_sitter/: tree-sitter-rego.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rego/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterRegoTests/: TreeSitterRegoTests.swift
corpus/: aliases.txt  assignment_and_equality.txt  iteration.txt  lookup.txt  rego_block.txt  rules.txt
queries/: highlights.scm  locals.scm
src/: README.md  grammar.json  node-types.json  parser.c
test/corpus/: arithmetic.txt  assignment_and_equality.txt  iteration.txt  lookup.txt  rule_with_multiple_body.txt  rules.txt  string_interpolation.txt  strings.txt  v0_heads.txt  v1_rules.txt
