[package]
name = "tree-sitter-rego"
description = "rego grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "rego"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/FallenAngel97/tree-sitter-rego"
edition = "2022"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
