[package]
name = "tree-sitter-rego"
version = "0.0.1"
categories = ["parsing", "text-editors"]
edition = "2022"
keywords = ["incremental", "parsing", "rego"]
license = "MIT"
repository = "https://github.com/FallenAngel97/tree-sitter-rego"
description = "rego grammar for the tree-sitter parsing library"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
